legend z-index fixes

--- a/src/styles/graph.css
+++ b/src/styles/graph.css
@@ -56,6 +56,7 @@
     position: fixed;
     left: 0;
     top: 40px;
+    z-index: -10;
 }
 
 .invana-graph-viewer #legend-div svg {
